@@ -40,8 +40,8 @@ setup(name='pyramid_jinja2',
       packages=find_packages(),
       include_package_data=True,
       zip_safe=False,
-      tests_require = ['pyramid', 'Jinja2'],
-      install_requires=['pyramid', 'Jinja2'],
+      tests_require = ['pyramid>=1.0a10', 'pyramid_zcml', 'Jinja2'],
+      install_requires=['pyramid>=1.0a10', 'pyramid_zcml', 'Jinja2'],
       test_suite="pyramid_jinja2",
       entry_points = """\
         [paste.paster_create_template]
